bpo-39235: Fix end location for genexp in call args (GH-17925)

The fix changes copy_location() to require an extra node from which to extract the end location, and fixing all 5 call sites.

https://bugs.python.org/issue39235
(cherry picked from commit a796d8ef9dd1af65f7e4d7a857b56f35b7cb6e78)

Co-authored-by: Guido van Rossum <guido@python.org>